concord_macros/tests/dsl/fail/fail_behaviors_invalid_item.rs
use concord_macros::api;

api! {
    client BadBehaviorsApi {
        base "https://example.com"

        behaviors {
            retry read
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
